feat: inital layout

--- a/src/app/components/pages/initial-page/initial-page.component.html
+++ b/src/app/components/pages/initial-page/initial-page.component.html
@@ -1,11 +1,17 @@
 <div>
-    <div class="menu-item" >
-        <span>Insert Candidate</span>
-    </div>
-    <div class="menu-item" >
-        <span>See Applicants</span>
-    </div>
-    <div class="menu-item" >
-        <span>Results</span>
-    </div>
+    <a routerLink="application/new" routerLinkActive="active">
+        <div class="menu-item" >
+            <span>Insert Applicantion</span>
+        </div>
+    </a>
+    <a routerLink="view" routerLinkActive="active">
+        <div class="menu-item" >
+            <span>See Candidates</span>
+        </div>
+    </a>
+    <a routerLink="results" routerLinkActive="active">
+        <div class="menu-item" >
+            <span>Results</span>
+        </div>
+    </a>
 </div>
