--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
 <app-header></app-header>
-<div class="page"><app-initial-page></app-initial-page></div>
+<div class="page"><router-outlet></router-outlet></div>
 <app-footer></app-footer>
