--- a/src/app/pages/application-form/application-form.component.html
+++ b/src/app/pages/application-form/application-form.component.html
@@ -1,1 +1,5 @@
-<p>application-form works!</p>
+<div>
+    <h1>Insert Candidate Name</h1>
+    <input placeholder="name" />
+    <button>Sign Applicantion</button>
+</div>
