feat: creates result & view pages

--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -1,1 +1,8 @@
-<p>results works!</p>
+<div class="container">
+    <h1>Welcome!</h1>
+    <div class="list">
+        <div>
+            John
+        </div>
+    </div>
+</div>
