--- a/src/app/pages/view/view.component.html
+++ b/src/app/pages/view/view.component.html
@@ -1,1 +1,18 @@
-<p>view works!</p>
+<div class="container">
+    <h1>Candidates</h1>
+    <div class="buttons">
+        <div><span>All</span></div>
+        <div><span>Received</span></div>
+        <div><span>Qualified</span></div>
+        <div><span>Approved</span></div>
+    </div>
+    <div class="candidates">
+        <div>
+            <span>John - Received</span>
+            <div class="options">
+                <div>Advance</div>
+                <div>X</div>
+            </div>
+        </div>
+    </div>
+</div>
