--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <h1>Welcome!</h1>
-    <div class="list">
+    <div class="list" *ngfor="let name of approved">
         <div>
-            John
+            {{name}}
         </div>
     </div>
 </div>
