--- a/src/app/pages/view/view.component.scss
+++ b/src/app/pages/view/view.component.scss
@@ -49,6 +49,7 @@
             height: 5vh;
             border-radius: 1vh;
             
+            margin: 2vh 0;
             padding: 0 2rem;
 
             .options {
