--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Welcome!</h1>
-    <div class="list" *ngfor="let name of approved">
+    <div class="list" *ngFor="let name of approved">
         <div>
             {{name}}
         </div>
